# gpmanager

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  START.bat  STATUS.bat  STOP.bat  dev.ps1  docker-compose.yml  render.yaml  run-local.ps1  start-local.ps1  status-local.ps1  stop-local.ps1
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.local  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_module1_auth.py  0002_module2_3_projects.py  0003_module5_guest_posts.py  0004_module6_websites.py  0005_module7_payments.py  0006_module8_tasks.py  0007_module9_notifications.py  0008_phase1_teams.py  0009_phase2_payment_currency.py  0010_phase2_import_engine.py  0011_phase2_clients_ledger.py  0012_widen_mode_of_payment.py  0013_soft_delete_trash.py  0014_project_currency_comments.py  0015_guest_post_review.py  0016_guest_post_soft_delete.py  0017_payment_comments.py  0018_platform_owner.py  0019_gp_workflow.py  0020_budget_management.py  0021_website_price_currency.py  0022_project_workflow_checklist.py  0023_project_checklist.py  0024_checklist_entry_subject.py  0025_checklist_item_assignee_link.py  0026_checklist_payment_fields.py  0027_checklist_website_metrics.py  0028_guest_post_pa.py  0029_task_source_link.py  0030_payment_assignment_workflow.py  0031_budget_cycles.py  (+1 more)
backend/api/: index.py  requirements.txt
backend/app/: __init__.py  main.py
backend/scripts/: seed.py
backend/tests/: test_health.py  test_models.py  test_security.py
(+230 files in other folders)
