[project]
name = "gpoms-backend"
version = "0.1.0"
description = "Digital Leap Guest Post Operations Management System — backend API"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends()) in argument defaults
    "N818",   # custom exceptions use intentional short names (NotFound, BadRequest, ...)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
